--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,7 @@
 <h1>My Tasks</h1>
 <% @tasks.each do |task| %>
 <p><%= link_to "#{task.title}", task_path(task.id)%></p>
+<p>Completed: <%= "#{task.completed}" %></p>
 <% end %>
+
+<button><%= link_to "Add Task", tasks_new_path%></button>
