--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
+<p><%= @task.completed %></p>
 <%= link_to "Edit / Complete", update_task_path(@task.id) %>
 <%= link_to "Back to Tasks", tasks_path %>
